--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       </section>
 
 
-<section class="portfolio">
+<section id="portfolio" class="portfolio">
   <div class="container">
     <div class="section-header">
       <div class="section-title">
