refactor: portfolio section - přepsání na stejnou strukturu jako ostatní sekce
- Změnil portfolio-grid na cards třídu pro konzistenci s ostatními sekcemi
- Portfolio sekce teď používá stejné CSS vlastnosti jako služby
- Přidal specifické styly pro video elementy v portfolio kartách
- Odstranil staré portfolio-grid CSS pravidla
- Zachoval veškerý obsah a funkčnost

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       </div>
       <p class="lead">Projekty, které jsem vytvořil pro klienty. Každý web je jedinečný a přizpůsobený potřebám daného byznysu.</p>
     </div>
-    <div class="portfolio-grid">
+    <div class="cards">
       <article class="card">
         <video muted loop preload="metadata">
           <source src="video.mov" type="video/quicktime">
