feat: portfolio-animated responsive layout - kompletní CSS a JavaScript fix
- Přidal CSS pro portfolio-animated layout s 3-sloupcovým gridem
- Desktop: 320px | 1fr | 320px (list | preview | info)
- Mobile (<1000px): vertikální stack s plnou šířkou
- Responsive videa: 480px → 420px → 320px na malých obrazovkách
- JavaScript fallback pro dynamické přepínání mezi desktop/mobile režimem
- Zabránění horizontálnímu scrollu a overflow problémům
- Centrování preview karet na mobilu s max-width 820px

--- a/index.html
+++ b/index.html
@@ -624,6 +624,44 @@
   <script src="animated-list.js"></script>
   <script src="stepper.js"></script>
   <script src="light-rays.js"></script>
+  
+  <!-- Portfolio responsive fallback script -->
+  <script>
+  (function(){
+    const root = document.querySelector('.portfolio-animated');
+    const scrollContainers = document.querySelectorAll('.scroll-list-container');
+
+    function adjustForMobile(){
+      if (!root) return;
+      if (window.innerWidth <= 1000){
+        scrollContainers.forEach(c => {
+          c.style.maxHeight = null;
+          c.style.height = null;
+          c.style.overflow = 'visible';
+        });
+        document.documentElement.classList.add('portfolio-stacked');
+      } else {
+        // restore to default behaviour (you can set a desktop maxHeight here if desired)
+        scrollContainers.forEach(c => {
+          // remove only if we added it before
+          if(c.dataset._wasFixed !== 'true') return;
+          c.style.maxHeight = c.dataset._desktopMax ?? '';
+          c.style.overflow = 'auto';
+        });
+        document.documentElement.classList.remove('portfolio-stacked');
+      }
+    }
+
+    // remember original desktop max-height (optional)
+    scrollContainers.forEach(c => {
+      c.dataset._desktopMax = c.style.maxHeight || '';
+    });
+
+    window.addEventListener('resize', adjustForMobile);
+    window.addEventListener('load', adjustForMobile);
+    adjustForMobile();
+  })();
+  </script>
 </body>
   </html>
 
