feat: restructure contact section with centered text
- Přesunul text z section-head do final-cta-container
- Vytvořil .final-cta-text div pro text nad kartou
- Přidal CSS pro centrování textu na střed karty
- Text je teď správně nad kartou a centrován
- Všechny odstavce s lead třídou jsou centrovány

--- a/index.html
+++ b/index.html
@@ -494,17 +494,15 @@
       <!-- Final CTA - Brief Form -->
       <section id="kontakt" class="reveal" aria-labelledby="brief-title">
         <div class="container">
-          <div class="section-head">
-            <div>
+          <div class="final-cta-container">
+            <div class="final-cta-text">
               <span class="eyebrow">Rychlý start</span>
               <h2 id="brief-title">Pojďme nastartovat váš web</h2>
               <p class="lead">Vyplňte krátký dotazník (5 minut) a já se vám hned ozvu s termínem konzultace a návrhem postupu na míru.</p>
               <p class="lead">Bez dobré komunikace to nejde – průběžně sdílím práci, ptám se na detaily a vše ladíme společně.</p>
             </div>
-          </div>
-          
-          <div class="final-cta-container">
-          <div class="final-cta-card">
+            
+            <div class="final-cta-card">
             <div class="final-cta-content">
               <h3>Jak to funguje?</h3>
               <div class="steps-grid">
