fix: restore pills to working fixed position; ensure visibility on all devices; center alignment

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <canvas id="bg" aria-hidden="true"></canvas>
     <a href="#uvod" class="sr-only">Přeskočit na obsah</a>
 
-    <!-- Style Picker -->
+    <!-- Style Picker (stays at very top and scrolls normally) -->
     <div class="style-pills" role="group" aria-label="Výběr stylu">
       <button class="pill" data-theme="duveryhodny" aria-pressed="false">Důvěryhodný</button>
       <button class="pill" data-theme="moderni" aria-pressed="true">Moderní</button>
