feat: optimize media and portfolio UI\n\n- Replace .mov with optimized .mp4 + posters\n- Convert images to WebP and update refs\n- Fix mobile portfolio spacing, simplify markup\n- Add external links to portfolio preview titles\n- Cleanup heavy assets to backup/ (not tracked)

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Playfair+Display:wght@500;700&family=Nunito:wght@500;700;800&family=Poppins:wght@500;700;800&family=Merriweather:wght@400;700&family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="themes_v2.css">
   <link rel="stylesheet" href="themes_pro.css">
   <link rel="stylesheet" href="themes_overrides.css?v=1">
   <link rel="stylesheet" href="gradual-blur.css">
@@ -82,7 +80,7 @@
               <div class="profile-card__content">
                 <div class="profile-card__header">
                   <div class="profile-card__avatar">
-                    <div class="profile-card__avatar-image" style="background-image: url('IMG_1620.jpg'); background-size: cover; background-position: center;"></div>
+                    <div class="profile-card__avatar-image" style="background-image: url('IMG_1620.webp'); background-size: cover; background-position: center;"></div>
                     <div class="profile-card__status" data-status="online"></div>
                   </div>
                   <div class="profile-card__user-info">
@@ -244,29 +242,29 @@
     </div>
     <div class="cards">
       <article class="card">
-        <video muted loop preload="metadata">
-          <source src="video.mov" type="video/quicktime">
-          <source src="video.mov" type="video/mp4">
+        <video muted loop playsinline preload="none" poster="video-thumb.webp">
+          <source src="video_opt.mp4" type="video/mp4">
           Váš prohlížeč nepodporuje video.
         </video>
         <h3>DetiDetem.eu</h3>
       </article>
       <article class="card">
-        <video src="video2.mov" muted loop preload="metadata"></video>
+        <video muted loop playsinline preload="none" poster="video2-thumb.webp">
+          <source src="video2_opt.mp4" type="video/mp4">
+          Váš prohlížeč nepodporuje video.
+        </video>
         <h3>Stavebniny Lhotský</h3>
       </article>
       <article class="card">
-        <video muted loop preload="metadata">
-          <source src="video3.mov" type="video/quicktime">
-          <source src="video3.mov" type="video/mp4">
+        <video muted loop playsinline preload="none" poster="video3-thumb.webp">
+          <source src="video3-payments_opt.mp4" type="video/mp4">
           Váš prohlížeč nepodporuje video.
         </video>
         <h3>SYSTEMWRAP</h3>
       </article>
       <article class="card">
-        <video muted loop preload="metadata">
-          <source src="video4.mov" type="video/quicktime">
-          <source src="video4.mov" type="video/mp4">
+        <video muted loop playsinline preload="none" poster="video4-thumb.webp">
+          <source src="video4_opt.mp4" type="video/mp4">
           Váš prohlížeč nepodporuje video.
         </video>
         <h3>MedoMed.cz</h3>
