--- a/profile-card.html
+++ b/profile-card.html
@@ -22,7 +22,7 @@
                 <!-- Avatar and status -->
                 <div class="profile-card__header">
                     <div class="profile-card__avatar">
-                            <div class="profile-card__avatar-image" style="background-image: url('IMG_1620.jpg'); background-size: cover; background-position: center;">
+                    <div class="profile-card__avatar-image" style="background-image: url('IMG_1620.webp'); background-size: cover; background-position: center;">
                             </div>
                         <!-- Status indicator -->
                         <div class="profile-card__status" data-status="online"></div>
