feat: Aurora Borealis background for Moderní style with interactive mouse tracking

--- a/index.html
+++ b/index.html
@@ -563,6 +563,7 @@
 
     <script defer src="script.js"></script>
     <script defer src="themes_v2.js"></script>
+    <script defer src="aurora-effects.js"></script>
     <script src="theme_debug.js"></script>
 
     <!-- Mobile nav removed -->
